--- a/public/partials/classemanage.html
+++ b/public/partials/classemanage.html
@@ -18,7 +18,7 @@
               <th class="grid-3">序&nbsp;号</th>
               <th class="grid-9">名&nbsp;称</th>
               <th class="grid-5">别&nbsp;名</th>
-              <th class="grid-6">创建事件</th>
+              <th class="grid-6">创建时间</th>
               <th class="grid-4">是否开启</th>
               <th class="grid-5">操&nbsp;作</th>
             </tr>
