--- a/public/partials/jade/classemanage.jade
+++ b/public/partials/jade/classemanage.jade
@@ -16,7 +16,7 @@ div(class="container-fluid classemanage")
               th(class="grid-3") 序&nbsp;号
               th(class="grid-9") 名&nbsp;称
               th(class="grid-5") 别&nbsp;名
-              th(class="grid-6") 创建事件
+              th(class="grid-6") 创建时间
               th(class="grid-4") 是否开启
               th(class="grid-5") 操&nbsp;作
           tbody
