--- a/public/styles/css/bootstrap.css
+++ b/public/styles/css/bootstrap.css
@@ -1869,8 +1869,8 @@ textarea.input-lg {
   min-height: 27px;
 }
 .form-horizontal .form-group {
-  margin-left: -15px;
-  margin-right: -15px;
+  /*margin-left: -15px;*/
+  /*margin-right: -15px;*/
 }
 .form-horizontal .form-group:before,
 .form-horizontal .form-group:after {
