--- a/public/styles/less/modules/special.less
+++ b/public/styles/less/modules/special.less
@@ -41,8 +41,70 @@
   }
 }
 
+.userslist {
+  .detail {
+    display: none;
+  }
+}
+
+.usercreate {
+  .form,
+  .form-tip {
+    height: 262px;
+  }
+  .form-tip {
+    background-color: #29a8cd;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    .title {
+      margin-bottom: 8px;
+      padding: 15px;
+      color: #fff;
+      font-size: 16px;
+    }
+    .content {
+      color: #fff;
+      li {
+        margin-top: 6px;
+      }
+    }
+  }
+  .form-group {
+    [class|=col-md] {
+      padding-right: 8px;
+      padding-left: 8px;
+    }
+    .control-label {
+      letter-spacing: 1px;
+    }
+    .user-add {
+      margin-left: 8px;
+    }
+  }
+  .checkboxs {
+    margin-top: 7px;
+    padding-left: 0;
+    > div {
+      float: left;
+      margin-right: 22px;
+    }
+    [type=checkbox] {
+      float: none;
+      display: inline-block;
+      margin: 0 4px 3px 0;
+      vertical-align: middle;
+    }
+  }
+  .tip {
+    padding-top: 7px;
+    span {
+      color: #ed9c28;
+    }
+  }
+}
+
 .passwordmodify {
   form {
-    margin-top: 60px;
+    margin-top: 20px;
   }
 }
