--- a/public/partials/jade/userslist.jade
+++ b/public/partials/jade/userslist.jade
@@ -14,15 +14,14 @@ div(class="container-fluid userslist")
           thead
             tr
               th(class="grid-2") 序&nbsp;号
-              th(class="grid-") 账&nbsp;号
-              th(class="grid-") 姓&nbsp;名
-              th(class="grid-") 职&nbsp;务
+              th(class="grid-3") 账&nbsp;号
+              th(class="grid-2") 姓&nbsp;名
+              th(class="grid-4") 职&nbsp;务
               th(class="grid-") 年&nbsp;级
               th(class="grid-") 班&nbsp;级
               th(class="grid-") 宿&nbsp;舍
               th(class="grid-") 联系方式
               th(class="grid-") Q&nbsp;Q
-              th(class="grid-3") 加入时间
               th(class="grid-4") 操&nbsp;作
           tbody(class="user-all single single-{{$index + 1}}" ng-repeat="user in users")
             tr(class="base")
@@ -35,7 +34,6 @@ div(class="container-fluid userslist")
               td(title="{{user.dormitory}}") {{user.dormitory}}
               td(title="{{user.phone}}") {{user.phone}}
               td(title="{{user.qq}}") {{user.qq}}
-              td(title="{{user.jointime | date: 'yyyy-MM-dd'}}") {{user.jointime | date: "yyyy-MM-dd"}}
               td
                 a(class="link-info" toggle-detail) 详&nbsp;情
                 span(class="separator")
