--- a/public/styles/less/modules/menus.less
+++ b/public/styles/less/modules/menus.less
@@ -1,6 +1,16 @@
+.page-sidebar {
+  .header {
+    margin: 50px 0 0 23px;
+    span {
+      font-size: 18px;
+      color: #fff;
+    }
+  }
+}
+
 .menus {
   position: relative;
-  padding-top: 80px;
+  padding-top: 20px;
   > li {
     display: block;
     margin: 0;
