--- a/public/partials/usercreate.html
+++ b/public/partials/usercreate.html
@@ -15,21 +15,21 @@
         <div class="form-group">
           <label for="account" class="col-md-4 control-label">登录账号：</label>
           <div class="col-md-4">
-            <input type="text" id="account" placeholder="账号" class="account form-control input-sm"/>
+            <input type="text" id="account" placeholder="登录账号" ng-model="useraccount" class="account form-control input-sm"/>
           </div>
-          <div class="tip col-md-3"><span>登录账号，有别于用户名</span></div>
+          <div class="tip col-md-4"><span>有别用户名，由数字和字母构成</span></div>
         </div>
         <div class="form-group">
           <label for="password" class="col-md-4 control-label">密码：</label>
           <div class="col-md-4">
-            <input type="text" id="password" placeholder="密码" value="123" class="password form-control input-sm"/>
+            <input type="password" id="password" placeholder="密码" value="123" ng-model="userpassword" class="password form-control input-sm"/>
           </div>
           <div class="tip col-md-3"><span>默认密码为'123'</span></div>
         </div>
         <div class="form-group">
-          <label for="jiontime" class="col-md-4 control-label">加入时间：</label>
+          <label for="jointime" class="col-md-4 control-label">加入时间：</label>
           <div class="col-md-4">
-            <input type="text" id="jiontime" placeholder="加入时间" class="jiontime form-control input-sm"/>
+            <input type="text" id="jointime" placeholder="格式：2014-12-12" ng-model="userjointime" class="jointime form-control input-sm"/>
           </div>
           <div class="tip col-md-3"><span>默认当前时间</span></div>
         </div>
@@ -37,17 +37,8 @@
           <label class="col-md-4 control-label">担任角色：</label>
           <div class="col-md-8">
             <div class="checkboxs clearfix">
-              <div>
-                <input type="checkbox" name="role" value="00000001"/><span>面试</span>
-              </div>
-              <div>
-                <input type="checkbox" name="role" value="00000100"/><span>开发人员</span>
-              </div>
-              <div>
-                <input type="checkbox" name="role" value="00100000"/><span>小组长</span>
-              </div>
-              <div>
-                <input type="checkbox" name="role" value="01000100"/><span>管理员</span>
+              <div ng-repeat="role in roles">
+                <input type="checkbox" value="{{role}}" ng-checked="selectedRoles.indexOf(role) &gt; -1" ng-click="toggleselectedRoles(role)"/><span>{{role | role}}</span>
               </div>
             </div>
           </div>
@@ -56,28 +47,19 @@
           <label class="col-md-4 control-label">所在小组：</label>
           <div class="col-md-8">
             <div class="checkboxs clearfix">
-              <div>
-                <input type="checkbox" name="" value=""/><span>前端组</span>
-              </div>
-              <div>
-                <input type="checkbox" name="" value=""/><span>安卓组</span>
-              </div>
-              <div>
-                <input type="checkbox" name="" value=""/><span>后台组</span>
-              </div>
-              <div>
-                <input type="checkbox" name="" value=""/><span>动画组</span>
-              </div>
-              <div>
-                <input type="checkbox" name="" value=""/><span>编译器组</span>
+              <div ng-repeat="group in groups">
+                <input type="checkbox" value="{{group.number}}" ng-checked="selectedGroups.indexOf(group.number) &gt; -1" ng-click="toggleselectedGroups(group.number)"/><span>{{group.name}}</span>
               </div>
             </div>
           </div>
         </div>
         <div class="form-group">
           <div class="col-sm-offset-4 col-md-8">
-            <buttom class="user-add btn btn-sm btn-warning">确认添加<i class="fa fa-plus"></i></buttom>
+            <buttom add-user="add-user" class="user-add btn btn-sm btn-warning">确认添加<i class="fa fa-plus"></i></buttom>
           </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-4 col-md-8"><span class="msg">{{addUserMsg}}</span></div>
         </div>
       </form>
     </div>
@@ -87,6 +69,7 @@
         <li>一但添加成功，那该人员立刻为工作室成员</li>
         <li>如需指派小组长，请到类别管理 > 小组管理</li>
         <li>新用户的其他信息，需有用户自己填写</li>
+        <li>登录账号，最好由数字或字母构成，其中登录账号有别于用户名</li>
       </ol>
     </div>
   </div>
