--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,7 @@
     </div>
     <div class="page-container">
       <div ng-controller="sidebarCtrl" class="page-sidebar">
+        <div class="header"><span>菜单栏</span></div>
         <ul class="menus">
           <li class="a-level active"><a><i class="fa fa-home"></i><span>仪表盘</span></a></li>
           <li ng-repeat="menu in menus" class="a-level"><a open-submenus><i ng-class="menu.class" class="fa"></i><span ng-bind="menu.name"></span><span class="arrow"></span></a>
@@ -34,7 +35,39 @@
       </div>
       <div class="page-content">
         <div ui-view>
-          <h2>仪表盘</h2>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <ol class="breadcrumb">
+                  <li><i class="fa fa-home"></i></li>
+                  <li class="active">仪表盘</li>
+                </ol>
+              </div>
+            </div>
+            <div class="dashboard row">
+              <div class="col-md-8 col-md-offset-2">
+                <h2 class="welcome">欢迎{{user.username}}登录人员与任务周期管理系统</h2>
+              </div>
+              <div class="col-md-8 col-md-offset-2">
+                <div class="tips">
+                  <div class="header"><i class="fa fa-bell-o"></i><span>小小提示</span></div>
+                  <div class="content">
+                    <ul>
+                      <li>请保证每日至少登录一次，已查看最新任务和通知</li>
+                      <li>各位成员请及时跟进小组长安排下来的任务并及时反馈</li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="announcement">
+                  <div class="header"><i class="fa fa-flag-o"></i><span>最新公告</span></div>
+                  <div class="content">
+                    <p>六月初，我们团队将开始本学年的团队招新，请各位成员开始准备招新工作</p>
+                    <p>总组长和各位小组长需要准备演讲资料</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
