--- a/public/styles/less/index.less
+++ b/public/styles/less/index.less
@@ -97,3 +97,12 @@ body {
     line-height: @footer-height;
   }
 }
+
+.page-info {
+  position: absolute;
+  top: 50px;
+  right: 15px;
+  .alert {
+    margin-bottom: 8px;
+  }
+}
