--- a/public/styles/less/modules/special.less
+++ b/public/styles/less/modules/special.less
@@ -63,6 +63,33 @@
 
 }
 
+.groupmanage {
+  // margin-top: 
+  .form-horizontal {
+    margin-right: 12px;
+    label {
+      padding-left: 6px;
+    }
+    textarea {
+      resize: none;
+      height: 75px
+    }
+    [type=checkbox] {
+      margin-top: 11px;
+    }
+  }
+  .add-group {
+    position: relative;
+    top: 47px;
+    button {
+      margin-top: 0 !important;
+    }
+  }
+  .begin-time {
+    margin-top: 3px;
+  }
+}
+
 .classemanage {
   .isopen {
     letter-spacing: 2px;
@@ -101,23 +128,9 @@
 }
 
 .usercreate {
-  .form,
-  .form-tip {
+  .form {
+    margin-top: 40px;
     height: 262px;
-  }
-  .form-tip {
-    .title {
-      margin-bottom: 4px;
-      padding: 15px;
-      color: #333;
-      font-size: 16px;
-    }
-    .content {
-      color: #333;
-      li {
-        margin-top: 6px;
-      }
-    }
   }
   .form-group {
     [class|=col-md] {
